--- a/backend/package.json
+++ b/backend/package.json
@@ -1,6 +1,5 @@
 {
   "dependencies": {
-<<<<<<< HEAD
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "exceljs": "^4.4.0",
@@ -23,12 +22,10 @@
   "description": "",
   "devDependencies": {
     "webpack": "^5.89.0",
-    "webpack-cli": "^5.1.4"
-=======
+    "webpack-cli": "^5.1.4",
     "express": "^4.18.2",
     "mysql2": "^3.6.5",
     "sequelize": "^6.35.1",
     "sqlite3": "^5.1.6"
->>>>>>> feature/body
   }
 }
